--- a/package.json
+++ b/package.json
@@ -13,21 +13,30 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.4",
     "ffmpeg-kit-react-native": "^6.0.2",
+    "pitchfinder": "^2.3.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-audio-recorder-player": "^3.6.10",
     "react-native-blob-util": "^0.19.11",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-draglist": "^3.6.2",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^4.1.5",
+    "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.5.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webrtc": "^124.0.4",
+    "react-native-webview": "^13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
